<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManagerActivity">

    <Button
        android:id="@+id/btFixInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:text="@string/btFixInfo" />

    <TextView
        android:id="@+id/tvUserAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btFixInfo"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/tvUserAccount"/>

    <TextView
        android:id="@+id/tvAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvUserAccount"
        app:layout_constraintBottom_toBottomOf="@id/tvUserAccount"
        android:layout_marginStart="6dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvUserAccount"
        app:layout_constraintTop_toBottomOf="@id/tvUserAccount"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/tvUserName"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvUserName"
        app:layout_constraintBottom_toBottomOf="@id/tvUserName"
        android:layout_marginStart="6dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvUserName"
        app:layout_constraintTop_toBottomOf="@id/tvUserName"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/tvPriority" />

    <TextView
        android:id="@+id/tvPri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvPriority"
        app:layout_constraintBottom_toBottomOf="@id/tvPriority"
        android:layout_marginStart="6dp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btManagement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/btManagement"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tvPriority" />
</android.support.constraint.ConstraintLayout>